Fixed bugs []...
fixed bug of localStorage notif overlapping content of the actual page.

added another color setting to change the dark accent color of the website.

--- a/css/Settings.css
+++ b/css/Settings.css
@@ -129,3 +129,9 @@ ul.settings-list:last-of-type {
   transform: translateX(-10%);
   opacity: 0;
 }
+
+.settings-list.color-settings li ul{
+  width: 50vw;
+  display: flex;
+  justify-content: space-between;
+}
