--- a/css/index.css
+++ b/css/index.css
@@ -407,6 +407,8 @@ label[for]{
 
 .localStorage__notif.confirmed__localStorage {
   opacity: 0;
+  height: 0;
+  width: 0;
 }
 
 .localStorage__content {
